--- a/index.html
+++ b/index.html
@@ -9,3 +9,118 @@
     <title>Voi's Portfolio</title>
 </head>
 
+<body>
+
+    <header class="main-head">
+        <figure>
+            <img src="" alt="Name header">
+        </figure>
+    </header>
+    
+    <nav class="main-nav">
+        
+        <div class="nav-header">
+            <h2>Hi There, I'm Voi</h2>
+        </div>
+
+        <div class="nav-bubbles">
+            <figure id="my-photo">
+                <img class="resize" src="assets\photos\voi-profile-img.jpg" alt="Profile photo">
+            </figure>
+        </div>
+
+        <div class="nav-bubbles">
+
+            <figure id="about-bubble"></figure>
+
+        </div>
+
+        <div class="nav-bubbles">
+
+            <figure id="resume-bubble"></figure>
+
+        </div>
+
+        <div class="nav-bubbles">
+
+            <figure id="portfolio-bubble"></figure>
+
+        </div>
+
+        <div class="nav-bubbles">
+
+            <figure id="contact-bubble"></figure>
+
+        </div>
+    </nav>
+
+    <section class="about">
+
+        <div class="about-header">
+
+            <h2>Hi There, I'm Voi</h2>
+
+        </div>
+
+        <div class="about-content">
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+        </div>
+
+    </section>
+
+    <section class="work">
+
+        <div class="work-bubble">
+            <figure>
+                <img src="" alt="">
+            </figure>
+        </div>
+
+        <div class="work-bubble">
+            <figure>
+                <img src="" alt="">
+            </figure>
+        </div>
+
+        <div class="work-bubble">
+            <figure>
+                <img src="" alt="">
+            </figure>
+        </div>
+
+        <div class="work-bubble">
+            <figure>
+                <img src="" alt="">
+            </figure>
+        </div>
+
+        <div class="work-bubble">
+            <figure>
+                <img src="" alt="">
+            </figure>
+        </div>
+    </section>
+
+    <section>
+        <div class="contact">
+            <h2>Contact Me</h2>
+        </div>
+
+        <div class="Contact">
+            <ul>
+                <li>phone</li>
+                <li>email</li>
+                <li>GitHub</li>
+                <li>LinkedIn</li>
+            </ul>
+        </div>
+
+    </section>
+
+    <footer class="footer">
+        <p>Made by Voi Jankowski.</p>
+    </footer>
+
+</body>
