Added the image for name header and positioned it.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
 
-    <header class="main-head">
-        <figure>
-            <img src="" alt="Name header">
-        </figure>
+    <header>
+        
+        <img id="main-head"src="assets\images\Name Header.png" alt="Name header">
+
     </header>
     
     <nav class="main-nav">
