Added comments to css header styling.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
 
     <header>
+        <figure id="name-bubble">
+            <img id="main-head"src="assets\images\Name Header.png" alt="Name header">
+        </figure>
         
-        <img id="main-head"src="assets\images\Name Header.png" alt="Name header">
 
     </header>
     
