Added the profile photo as the first bubble in main-nav and tied the elements size to the parent size.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div id="my-photo">
             <figure>
-                <img class="resize" src="assets\photos\voi-profile-img.jpg" alt="Profile photo">
+                <img id="resize" src="assets\images\voi-profile-img.jpg" alt="Profile photo">
             </figure>
         </div>
 
