Added the second bubble with <about> link.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <div id="about-bubble">
 
-            <figure></figure>
+            <a href=".about"><img src="assets\images\About.png" alt="Link to About"></a>
 
         </div>
 
