Added the rest of the link bubbles

--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
 
         <div id="about-bubble">
 
-            <a href=".about"><img src="assets\images\About.png" alt="Link to About"></a>
+            <a href=""><img src="assets\images\About.png" alt="Link to About"></a>
 
         </div>
 
         <div id="resume-bubble">
 
-            <figure></figure>
+            <a href=""><img src="assets\images\Resume.png" alt="Link to Resume"></a>
 
         </div>
 
         <div id="works-bubble">
 
-            <figure></figure>
+            <a href=""><img src="assets\images\My Work.png" alt="Link to My Work"></a>
 
         </div>
 
         <div id="contact-bubble">
 
-            <figure></figure>
+            <a href=""><img src="assets\images\Contact.png" alt="Link to Contact"></a>
 
         </div>
     </nav>
