--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div id="my-photo">
             <figure>
-                <img id="resize" src="assets\images\voi-profile-img.jpg" alt="Profile photo">
+                <img src="assets\images\voi-profile-img.jpg" alt="Profile photo">
             </figure>
         </div>
 
