--- a/index.html
+++ b/index.html
@@ -105,17 +105,17 @@
         </div>
     </section>
 
-    <section>
-        <div class="contact">
+    <section class="contact">
+        <div id="contact-header">
             <h2>Contact Me</h2>
         </div>
 
-        <div class="Contact">
+        <div id="contact-links">
             <ul>
-                <li>phone</li>
-                <li>email</li>
-                <li>GitHub</li>
-                <li>LinkedIn</li>
+                <li id="email"><a href="">Email</a></li>
+                <li id="linkedin"><a href="">LinkedIn</a></li>
+                <li id="github"><a href="">GitHub</a></li>
+               
             </ul>
         </div>
 
