Added ids to <work> elements and created a grid in <work> section.

--- a/index.html
+++ b/index.html
@@ -74,31 +74,31 @@
 
     <section class="work">
 
-        <div class="work-bubble">
+        <div class="work-bubble" id="work1">
             <figure>
                 <img src="" alt="">
             </figure>
         </div>
 
-        <div class="work-bubble">
+        <div class="work-bubble" id="work2">
             <figure>
                 <img src="" alt="">
             </figure>
         </div>
 
-        <div class="work-bubble">
+        <div class="work-bubble" id="work3">
             <figure>
                 <img src="" alt="">
             </figure>
         </div>
 
-        <div class="work-bubble">
+        <div class="work-bubble" id="work4">
             <figure>
                 <img src="" alt="">
             </figure>
         </div>
 
-        <div class="work-bubble">
+        <div class="work-bubble" id="work5">
             <figure>
                 <img src="" alt="">
             </figure>
