Assigned placeholder images to work-bubbles and set their opacity.

--- a/index.html
+++ b/index.html
@@ -73,35 +73,25 @@
     </section>
 
     <section class="work">
-
+<!--Images sourced on Freepik https://www.freepik.com/free-photos-vectors/internet-of-things  -->
         <div class="work-bubble" id="work1">
-            <figure>
-                <img src="" alt="">
-            </figure>
+                <img src="assets\images\work-1.jpg" alt="">
         </div>
 
         <div class="work-bubble" id="work2">
-            <figure>
-                <img src="" alt="">
-            </figure>
+                <img src="assets\images\work-2.jpg" alt="">
         </div>
 
         <div class="work-bubble" id="work3">
-            <figure>
-                <img src="" alt="">
-            </figure>
+                <img src="assets\images\work-3.png" alt="">
         </div>
 
         <div class="work-bubble" id="work4">
-            <figure>
-                <img src="" alt="">
-            </figure>
+                <img src="assets\images\work-4.jpg" alt="">
         </div>
 
         <div class="work-bubble" id="work5">
-            <figure>
-                <img src="" alt="">
-            </figure>
+                <img src="assets\images\work-5.jpg" alt="">
         </div>
     </section>
 
