Attached alt descriptions to work-bubbles images and placed labels on top of them.

--- a/index.html
+++ b/index.html
@@ -75,23 +75,28 @@
     <section class="work">
 <!--Images sourced on Freepik https://www.freepik.com/free-photos-vectors/internet-of-things  -->
         <div class="work-bubble" id="work1">
-                <img src="assets\images\work-1.jpg" alt="">
+                <img src="assets\images\work-1.jpg" alt="PLaceholder image 1">
+                <h3>Work 1</h3>
         </div>
 
         <div class="work-bubble" id="work2">
-                <img src="assets\images\work-2.jpg" alt="">
+            <img src="assets\images\work-2.jpg" alt="PLaceholder image 2">
+            <h3>Work 2</h3>
         </div>
 
         <div class="work-bubble" id="work3">
-                <img src="assets\images\work-3.png" alt="">
+            <img src="assets\images\work-3.png" alt="PLaceholder image 3">
+            <h3>Work 3</h3>
         </div>
 
         <div class="work-bubble" id="work4">
-                <img src="assets\images\work-4.jpg" alt="">
+            <img src="assets\images\work-4.jpg" alt="PLaceholder image 4">
+            <h3>Work 4</h3>
         </div>
 
         <div class="work-bubble" id="work5">
-                <img src="assets\images\work-5.jpg" alt="">
+            <img src="assets\images\work-5.jpg" alt="PLaceholder image 5">
+            <h3>Work 5</h3>
         </div>
     </section>
 
