Added links in the contact section.

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 
         <div id="contact-links">
             <ul>
-                <li id="email"><a href="">Email</a></li>
-                <li id="linkedin"><a href="">LinkedIn</a></li>
-                <li id="github"><a href="">GitHub</a></li>
+                <li id="email"><a href="mailto:wojtek.wacek.dola@gmail.com">Email</a></li>
+                <li id="linkedin"><a href="https://www.linkedin.com/in/wojtek-jankowski-009011210/">LinkedIn</a></li>
+                <li id="github"><a href="https://github.com/voi-jankowski">GitHub</a></li>
                
             </ul>
         </div>
