Added headers to sections and changed the layout of the objects.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
 
     <header>
-
-        <figure id="name-bubble">
-            <img id="main-head"src="assets\images\Name Header.png" alt="Name header">
-        </figure>
-        
+        <div>
+            <figure id="name-bubble">
+                <img id="main-head"src="assets\images\Name Header.png" alt="Name header">
+            </figure>
+        </div>
     </header>
     
     <nav id="main-nav">
@@ -58,6 +58,8 @@
 
     <section id="about">
 
+        <figure><img src="assets\images\About.png" alt="Link to About"></figure>
+
         <div class="about-header">
 
             <h2>Hi There, I'm Voi</h2>
@@ -73,6 +75,8 @@
     </section>
 
     <section id="work">
+
+        <figure><img src="assets\images\My Work.png" alt="Link to My Work"></figure>
 <!--Images sourced on Freepik https://www.freepik.com/free-photos-vectors/internet-of-things  -->
         <div class="work-bubble" id="work1">
                 <img src="assets\images\work-1.jpg" alt="PLaceholder image 1">
