Replaced contact header with contact image.

--- a/index.html
+++ b/index.html
@@ -105,11 +105,10 @@
     </section>
 
     <section id="contact">
-        <div id="contact-header">
-            <h2>Contact Me</h2>
-        </div>
 
-        <div id="contact-links">
+        <img src="assets\images\Contact.png" alt="Link to Contact">
+
+        <div>
             <ul>
                 <li id="email"><a href="mailto:wojtek.wacek.dola@gmail.com">Email</a></li>
                 <li id="linkedin"><a href="https://www.linkedin.com/in/wojtek-jankowski-009011210/">LinkedIn</a></li>
