Fixed the positioning of objects on tablet UI after adding headers.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section id="about">
 
-        <figure><img src="assets\images\About.png" alt="Link to About"></figure>
+        <figure><img src="assets\images\About.png" alt="About Header"></figure>
 
         <div class="about-header">
 
@@ -76,7 +76,8 @@
 
     <section id="work">
 
-        <figure><img src="assets\images\My Work.png" alt="Link to My Work"></figure>
+        <figure><img src="assets\images\My Work.png" alt="My Work Header"></figure>
+
 <!--Images sourced on Freepik https://www.freepik.com/free-photos-vectors/internet-of-things  -->
         <div class="work-bubble" id="work1">
                 <img src="assets\images\work-1.jpg" alt="PLaceholder image 1">
@@ -106,7 +107,7 @@
 
     <section id="contact">
 
-        <img src="assets\images\Contact.png" alt="Link to Contact">
+        <img src="assets\images\Contact.png" alt="Contact Header">
 
         <div>
             <ul>
