Changed the color of the works links to black.

--- a/index.html
+++ b/index.html
@@ -78,14 +78,13 @@
 
         <figure><img src="assets\images\My Work.png" alt="My Work Header"></figure>
 
-<!--Images sourced on Freepik https://www.freepik.com/free-photos-vectors/internet-of-things  -->
         <div class="work-bubble" id="work1">
-                <img src="assets\images\work-1.jpg" alt="PLaceholder image 1">
+                <img src="assets\images\work-1.png" alt="PLaceholder image 1">
                 <a href="">Work 1</a>
         </div>
 
         <div class="work-bubble" id="work2">
-            <img src="assets\images\work-2.jpg" alt="PLaceholder image 2">
+            <img src="assets\images\work-2.png" alt="PLaceholder image 2">
             <a href="">Work 2</a>
         </div>
 
@@ -95,12 +94,12 @@
         </div>
 
         <div class="work-bubble" id="work4">
-            <img src="assets\images\work-4.jpg" alt="PLaceholder image 4">
+            <img src="assets\images\work-4.png" alt="PLaceholder image 4">
             <a href="">Work 4</a>
         </div>
 
         <div class="work-bubble" id="work5">
-            <img src="assets\images\work-5.jpg" alt="PLaceholder image 5">
+            <img src="assets\images\work-5.png" alt="PLaceholder image 5">
             <a href="">Work 5</a>
         </div>
     </section>
