Added comments to the HTML file.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Voi's Portfolio</title>
 </head>
 
+<!-- The images of the headers created in Photoshop with free 'Clutchee' font from https://www.fontsquirrel.com/fonts/clutchee  -->
+
 <body>
 
     <header>
@@ -39,6 +41,7 @@
 
         <div id="resume-bubble">
 
+            <!-- The anchor has href empty here to be filled later with the link to the pdf of the updated CV. -->
             <a href=""><img src="assets\images\Resume.png" alt="Link to Resume"></a>
 
         </div>
@@ -62,7 +65,6 @@
 
         <br>
         
-        
         <div id="about-content">
 
             <p>Voi here! I'm a former head-chef turned soon-to-be coder who is currently completing The Coding Bootcamp at USYD.</p>
@@ -77,6 +79,7 @@
 
     </section>
 
+    <!-- My works section contains placeholder images created in Photoshop, later to be replaced with images of my completed projects. The anchors have empty href eventually to be filled with links to those completed projects. -->
     <section id="work">
 
         <figure><img src="assets\images\My Work.png" alt="My Work Header"></figure>
