Changed the title of the page and set the width of the body to auto.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assets\reset.css">
     <link rel="stylesheet" type="text/css" href="assets\style.css">
-    <title>Voi's Portfolio</title>
+    <title>Voi Jankowski Portfolio</title>
 </head>
 
 <!-- The images of the headers created in Photoshop with free 'Clutchee' font from https://www.fontsquirrel.com/fonts/clutchee  -->
