Added the latest project to the portfolio.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <figure><img src="assets/images/My-Work.png" alt="My Work Header"></figure>
 
         <div class="work-bubble" id="work1">
-                <img src="assets/images/work-1.png" alt="PLaceholder image 1">
-                <a href="">Work 1</a>
+                <img src="assets/images/work-1.png" alt="Marvelites screenshot">
+                <a href="https://voi-jankowski.github.io/marvel/">Marvelites</a>
         </div>
 
         <div class="work-bubble" id="work2">
