Changed ABOUT section.

--- a/index.html
+++ b/index.html
@@ -64,26 +64,24 @@
 
       <div id="about-content">
         <p>
-          Voi here! I'm a former head-chef turned soon-to-be coder who is
-          currently completing The Coding Bootcamp at USYD.
+          Voi here - full stack Web Developer with an extensive background in
+          real-time problem solving, intensive teamwork and management with a
+          focus on delivering client satisfaction down to the last detail.
         </p>
         <br />
         <p>
-          I studied American Literature at Warsaw University before moving to
-          London where I donned my head-chef hat and tackled the high-pressure
-          world of fine dining.
-        </p>
-        <br />
-        <p>
-          I'm bringing my love of problem-solving from the kitchen to my new
-          career path and loving every moment of this brilliantly challenging
-          journey as I debug my life and set about mastering full stack web
+          I studied American Literature at Warsaw University and went on to work
+          as a Head Chef in high-pressure and fine dining kitchens across
+          London. With my combined love of problem solving and bringing
+          complicated ideas to life, I'm now in the brilliant world of web
           development.
         </p>
         <br />
         <p>
-          Interested? Click on over to my portfolio for a look at some of my
-          work.
+          I've collaborated on multiple projects, available within my portfolio,
+          including complex applications. I love the challenge of working both
+          independently and within a multi-disciplined team, and I really shine
+          when it comes to producing unique solutions that exceed expectations.
         </p>
       </div>
     </section>
