--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <nav id="main-nav">
       <div id="nav-header">
-        <h2>Ahoy! Voi, prospective coder, here. Some bits below made by me.</h2>
+        <h2>Ahoy! Voi, web developer, here. Some bits below made by me.</h2>
       </div>
 
       <div id="my-photo">
@@ -38,8 +38,7 @@
       </div>
 
       <div id="resume-bubble">
-        <!-- The anchor has href empty here to be filled later with the link to the pdf of the updated CV. -->
-        <a href=""
+        <a href="https://drive.google.com/file/d/13gJ0KhZifEDD9gqVvX2YrINbLB8X9t9a/view?usp=sharing"
           ><img src="assets/images/Resume.png" alt="Link to Resume"
         /></a>
       </div>
