Added the job-board project to the portfolio.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       </div>
 
       <div id="resume-bubble">
-        <a href="https://drive.google.com/file/d/13gJ0KhZifEDD9gqVvX2YrINbLB8X9t9a/view?usp=sharing"
+        <a
+          href="https://drive.google.com/file/d/13gJ0KhZifEDD9gqVvX2YrINbLB8X9t9a/view?usp=sharing"
           ><img src="assets/images/Resume.png" alt="Link to Resume"
         /></a>
       </div>
@@ -97,26 +98,35 @@
       </div>
 
       <div class="work-bubble" id="work2">
-        <img src="assets/images/dashboard-3.png" alt="PLaceholder image 2" />
-        <a href="https://voi-jankowski.github.io/weather-dashboard/">Work 2</a>
+        <img
+          src="assets/images/dashboard-3.png"
+          alt="Weather Dashboard screenshot"
+        />
+        <a href="https://voi-jankowski.github.io/weather-dashboard/"
+          >Weather Dashboard</a
+        >
       </div>
 
       <div class="work-bubble" id="work3">
-        <img src="assets/images/readme-4.png" alt="PLaceholder image 3" />
-        <a href="https://github.com/voi-jankowski/svg-logo-maker">Work 3</a>
+        <img src="assets/images/noticed_app.png" alt="Noticed Screenshot" />
+        <a href="https://noticed-job-board.herokuapp.com/">Noticed Job Board</a>
       </div>
 
       <div class="work-bubble" id="work4">
-        <img src="assets/images/scheduler-2.png" alt="PLaceholder image 4" />
-        <a href="https://voi-jankowski.github.io/work-day-scheduler/">Work 4</a>
+        <img src="assets/images/scheduler-2.png" alt="Scheduler screenshot" />
+        <a href="https://voi-jankowski.github.io/work-day-scheduler/"
+          >Work Day Scheduler</a
+        >
       </div>
 
       <div class="work-bubble" id="work5">
         <img
           src="assets/images/password-generator.png"
-          alt="PLaceholder image 5"
+          alt="Password Generator screenshot"
         />
-        <a href="https://voi-jankowski.github.io/password-generator/">Work 5</a>
+        <a href="https://voi-jankowski.github.io/password-generator/"
+          >Password Generator</a
+        >
       </div>
     </section>
 
